samples/_failures_safe/1760960956_6d5d35_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a03c5fbb.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_a03c5fbb.c:170:32: error: missing terminating " character
  170 |         case TOKEN_EOF: printf("
      |                                ^
./samples/SAFE/__tmp_a03c5fbb.c:170:9: error: expected expression at end of input
  170 |         case TOKEN_EOF: printf("
      |         ^~~~
./samples/SAFE/__tmp_a03c5fbb.c:170:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a03c5fbb.c:170:9: error: expected declaration or statement at end of input
